trying out a workaround for background-attachement: fixed on mobile

--- a/style.css
+++ b/style.css
@@ -274,9 +274,19 @@ h3 {
     }
 }
 @media screen and (max-width: 500px) {
-    /* .hero-section::after {
+    main:before {
+        content: "";
+        display: block;
+        position: fixed;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -10;
+      }
+    .hero-section::after {
         background-color: black;
-    } */
+    }
     .hero-header {
         font-size: 50px;
         margin-bottom: 0;
